// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. article summary component with a single paragraph 1`] = `
<View>
  <View>
    <ArticleLabel
      color="#333333"
      title="Test label"
    />
  </View>
  <Text
    accessibilityRole="heading"
    aria-level="3"
  >
    Test Headline
  </Text>
  <Text>
    <Text>
      
      Test paragraph
      ...
    </Text>
  </Text>
  <ArticleFlags
    flags={
      Array [
        Object {
          "expiryTime": "2020-03-13T12:00:00.000Z",
          "type": "UPDATED",
        },
        Object {
          "expiryTime": "2019-03-14T12:00:00.000Z",
          "type": "EXCLUSIVE",
        },
      ]
    }
  />
  <Text>
    <DatePublication
      date="2017-11-17T00:01:00.000Z"
      publication="TIMES"
    />
  </Text>
  <Text>
    <ArticleByline
      ast={
        Array [
          Object {
            "attributes": Object {
              "slug": "camilla-long",
            },
            "children": Array [
              Object {
                "attributes": Object {
                  "value": "Camilla Long",
                },
                "children": Array [],
                "name": "text",
              },
            ],
            "name": "author",
          },
          Object {
            "attributes": Object {},
            "children": Array [
              Object {
                "attributes": Object {
                  "value": ", Environment Editor",
                },
                "children": Array [],
                "name": "text",
              },
            ],
            "name": "inline",
          },
        ]
      }
    />
  </Text>
</View>
`;

exports[`2. article summary with opinion byline 1`] = `
<View>
  <View>
    <ArticleLabel
      color="#333333"
      title="Test label"
    />
  </View>
  <Text>
    <ArticleBylineOpinion
      ast={
        Array [
          Object {
            "byline": Array [
              Object {
                "attributes": Object {},
                "children": Array [
                  Object {
                    "attributes": Object {
                      "value": "A byline",
                    },
                    "children": Array [],
                    "name": "text",
                  },
                ],
                "name": "inline",
              },
            ],
          },
        ]
      }
      isOpinionByline={true}
    />
  </Text>
  <Text
    accessibilityRole="heading"
    aria-level="3"
  >
    Test Headline
  </Text>
  <Text>
    <Text>
      
      Test paragraph
      ...
    </Text>
  </Text>
  <Text>
    <DatePublication
      date="2017-11-17T00:01:00.000Z"
      publication="TIMES"
    />
  </Text>
</View>
`;

exports[`3. article summary component with multiple paragraphs 1`] = `
<View>
  <Text
    accessibilityRole="heading"
    aria-level="3"
  >
    Test Headline
  </Text>
  <Text>
    <Text>
      
      Test paragraph 1.
    </Text>
    <Text>
       
      Test paragraph 2
      ...
    </Text>
  </Text>
  <Text>
    <DatePublication
      date="2017-11-17T00:01:00.000Z"
      publication="TIMES"
    />
  </Text>
  <Text>
    <ArticleByline
      ast={
        Array [
          Object {
            "byline": Array [
              Object {
                "attributes": Object {},
                "children": Array [
                  Object {
                    "attributes": Object {
                      "value": "A byline",
                    },
                    "children": Array [],
                    "name": "text",
                  },
                ],
                "name": "inline",
              },
            ],
          },
        ]
      }
    />
  </Text>
</View>
`;

exports[`4. article summary component with content including line breaks 1`] = `
<View>
  <Text>
    <Text>
      
      <Text>
        Review 1
      </Text>
      <Text>
        

      </Text>
       ITV
      <Text>
        

      </Text>
      ★★★★☆
    </Text>
    <Text>
       
      <Text>
        Review 2
      </Text>
      <Text>
        

      </Text>
       BBC Two
      <Text>
        

      </Text>
      ★★★☆☆
    </Text>
    <Text>
       
      Test paragraph
      ...
    </Text>
  </Text>
</View>
`;

exports[`5. article summary component containing links 1`] = `
<View>
  <View>
    <ArticleLabel
      color="#333333"
      title="Test label"
    />
  </View>
  <Text
    accessibilityRole="heading"
    aria-level="3"
  >
    Test Headline
  </Text>
  <Text>
    <Text>
      
      <Text>
        Sajid Javid
      </Text>
       has warned the Home Office to expect an overhaul after the 
      <Text>
        Windrush scandal
      </Text>
       as he ditches the policy of creating a “hostile
      ...
    </Text>
  </Text>
  <Text>
    <DatePublication
      date="2017-11-17T00:01:00.000Z"
      publication="TIMES"
    />
  </Text>
</View>
`;

exports[`6. article summary component with headline and no content 1`] = `
<View>
  <View>
    <ArticleLabel
      color="#333333"
      title="Test label"
    />
  </View>
  <Text
    accessibilityRole="heading"
    aria-level="3"
  >
    Test Headline
  </Text>
  <Text>
    <DatePublication
      date="2017-07-01T14:32:00.000Z"
      publication="SUNDAYTIMES"
    />
  </Text>
</View>
`;

exports[`7. article summary component with empty content at the end trimmed 1`] = `
<View>
  <View>
    <ArticleLabel
      color="#333333"
      title="Test label"
    />
  </View>
  <Text
    accessibilityRole="heading"
    aria-level="3"
  >
    Test Headline
  </Text>
  <Text>
    <Text>
      
      Test paragraph 1.
    </Text>
    <Text>
       
      Test paragraph 2
    </Text>
    <Text>
       
      ...
    </Text>
  </Text>
  <Text>
    <DatePublication
      date="2017-07-01T14:32:00.000Z"
      publication="SUNDAYTIMES"
    />
  </Text>
  <Text>
    <ArticleByline
      ast={
        Array [
          Object {
            "byline": Array [
              Object {
                "attributes": Object {},
                "children": Array [
                  Object {
                    "attributes": Object {
                      "value": "A byline",
                    },
                    "children": Array [],
                    "name": "text",
                  },
                ],
                "name": "inline",
              },
            ],
          },
        ]
      }
    />
  </Text>
</View>
`;

exports[`8. article summary component with no byline 1`] = `
<View>
  <Text
    accessibilityRole="heading"
    aria-level="3"
  >
    Test Headline
  </Text>
  <Text>
    <Text>
      
      Test paragraph
      ...
    </Text>
  </Text>
  <Text>
    <DatePublication
      date="2017-11-17T00:01:00.000Z"
      publication="TIMES"
    />
  </Text>
</View>
`;

exports[`9. article summary component with no label 1`] = `
<View>
  <Text
    accessibilityRole="heading"
    aria-level="3"
  >
    Test Headline
  </Text>
  <Text>
    <Text>
      
      Test paragraph
      ...
    </Text>
  </Text>
  <Text>
    <DatePublication
      date="2017-11-17T00:01:00.000Z"
      publication="TIMES"
    />
  </Text>
  <Text>
    <ArticleByline
      ast={
        Array [
          Object {
            "byline": Array [
              Object {
                "attributes": Object {},
                "children": Array [
                  Object {
                    "attributes": Object {
                      "value": "A byline",
                    },
                    "children": Array [],
                    "name": "text",
                  },
                ],
                "name": "inline",
              },
            ],
          },
        ]
      }
    />
  </Text>
</View>
`;

exports[`10. article summary component with no headline 1`] = `
<View>
  <View>
    <ArticleLabel
      color="#333333"
      title="Test label"
    />
  </View>
  <Text>
    <Text>
      
      Test paragraph
      ...
    </Text>
  </Text>
  <Text>
    <DatePublication
      date="2017-07-01T14:32:00.000Z"
      publication="SUNDAYTIMES"
    />
  </Text>
</View>
`;

exports[`11. article summary component with no date publication 1`] = `
<View>
  <View>
    <ArticleLabel
      color="#333333"
      title="Test label"
    />
  </View>
  <Text
    accessibilityRole="heading"
    aria-level="3"
  >
    Test Headline
  </Text>
  <Text>
    <Text>
      
      Test paragraph
      ...
    </Text>
  </Text>
  <Text>
    <ArticleByline
      ast={
        Array [
          Object {
            "byline": Array [
              Object {
                "attributes": Object {},
                "children": Array [
                  Object {
                    "attributes": Object {
                      "value": "A byline",
                    },
                    "children": Array [],
                    "name": "text",
                  },
                ],
                "name": "inline",
              },
            ],
          },
        ]
      }
    />
  </Text>
</View>
`;

exports[`12. article summary component with a video label 1`] = `
<View>
  <View>
    <VideoLabel
      color="#333333"
      isVideo={true}
      title="Test label"
    />
  </View>
  <Text
    accessibilityRole="heading"
    aria-level="3"
  >
    Test Headline
  </Text>
  <Text>
    <Text>
      
      Test paragraph
      ...
    </Text>
  </Text>
  <Text>
    <DatePublication
      date="2017-11-17T00:01:00.000Z"
      publication="TIMES"
    />
  </Text>
  <Text>
    <ArticleByline
      ast={
        Array [
          Object {
            "byline": Array [
              Object {
                "attributes": Object {},
                "children": Array [
                  Object {
                    "attributes": Object {
                      "value": "A byline",
                    },
                    "children": Array [],
                    "name": "text",
                  },
                ],
                "name": "inline",
              },
            ],
          },
        ]
      }
    />
  </Text>
</View>
`;

exports[`13. article summary component with a strapline 1`] = `
<View>
  <View>
    <ArticleLabel
      color="#333333"
      title="Test label"
    />
  </View>
  <Text
    accessibilityRole="heading"
    aria-level="3"
  >
    Test Headline
  </Text>
  <Text
    accessibilityRole="heading"
    aria-level="4"
  >
    Test Strapline
  </Text>
  <Text>
    <Text>
      
      Test paragraph
      ...
    </Text>
  </Text>
  <ArticleFlags
    flags={
      Array [
        Object {
          "expiryTime": "2020-03-13T12:00:00.000Z",
          "type": "UPDATED",
        },
        Object {
          "expiryTime": "2019-03-14T12:00:00.000Z",
          "type": "EXCLUSIVE",
        },
      ]
    }
  />
  <Text>
    <DatePublication
      date="2017-11-17T00:01:00.000Z"
      publication="TIMES"
    />
  </Text>
  <Text>
    <ArticleByline
      ast={
        Array [
          Object {
            "byline": Array [
              Object {
                "attributes": Object {
                  "slug": "camilla-long",
                },
                "children": Array [
                  Object {
                    "attributes": Object {
                      "value": "Camilla Long",
                    },
                    "children": Array [],
                    "name": "text",
                  },
                ],
                "name": "author",
              },
            ],
          },
          Object {
            "byline": Array [
              Object {
                "attributes": Object {},
                "children": Array [
                  Object {
                    "attributes": Object {
                      "value": ", Environment Editor",
                    },
                    "children": Array [],
                    "name": "text",
                  },
                ],
                "name": "inline",
              },
            ],
          },
        ]
      }
    />
  </Text>
</View>
`;

exports[`14. article summary content component without an ast to render null 1`] = `null`;
